# AI-Runtime

./: package-lock.json
src/: App.css  App.tsx  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: critique.rs  executor.rs  mod.rs  planning.rs  test_harness.rs  types.rs
src-tauri/src/cognition/: arbitration.rs  audit.rs  belief_graph.rs  budget.rs  calibration.rs  causal.rs  causal_counterfactual.rs  causal_decay.rs  causal_physics.rs  causal_resonance.rs  causal_structural.rs  causal_temporal.rs  checkpoints.rs  coalition.rs  coherence.rs  coherence_mesh.rs  compiler.rs  compiler_driver.rs  compression.rs  consensus_mesh.rs  consolidation.rs  constitution.rs  constitutional_risk.rs  contradiction.rs  deliberation.rs  diversity.rs  energy.rs  epistemic_economy.rs  epistemic_governance.rs  fatigue.rs  federated_identity.rs  federation.rs  forecast_audit.rs  forecasting.rs  fracture.rs  global_compression.rs  graph.rs  grounding.rs  homeostasis.rs  human_gate.rs  (+29 more)
src-tauri/src/engine/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/intelligence/: ast.rs  graph.rs  incremental.rs  indexing.rs  mod.rs  retrieval.rs  symbols.rs
src-tauri/src/learning/: abstraction.rs  anti_poisoning.rs  confidence.rs  drift_predictor.rs  evolution.rs  fingerprints.rs  hash.rs  ir.rs  mod.rs  provider_profiles.rs  retrieval.rs  router.rs  strategies.rs  translation.rs  translation_validator.rs
src-tauri/src/runtime/: errors.rs  executor.rs  logs.rs  mod.rs  processes.rs  repair.rs  reports.rs  sandbox.rs  verifier.rs
(+15 files in other folders)
